Test view update.

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -33,31 +33,31 @@ $( document ).ready( function( ) {
 
         switch (event.keyCode) {
             case 65: // A
-                Syllabus.alert( 'dark', "Fusce dapibus tellus ac cursus commodo.", true );
+                SILTools.alert( 'dark', "Fusce dapibus tellus ac cursus commodo.", true );
                 break;
             case 76: // L
-                Syllabus.alert( 'light', "Tortor mauris condimentum nibh.", true );
+                SILTools.alert( 'light', "Tortor mauris condimentum nibh.", true );
                 break;
             case 80: // P
-                Syllabus.alert( 'primary', "Ut fermentum massa justo sit amet risus.", true );
+                SILTools.alert( 'primary', "Ut fermentum massa justo sit amet risus.", true );
                 break;
             case 69: // E
-                Syllabus.alert( 'secondary', "Vivamus sagittis lacus vel augue.", true );
+                SILTools.alert( 'secondary', "Vivamus sagittis lacus vel augue.", true );
                 break;
             case 73: // I
-                Syllabus.alert( 'info', "Laoreet rutrum faucibus dolor auctor.", true );
+                SILTools.alert( 'info', "Laoreet rutrum faucibus dolor auctor.", true );
                 break;
             case 83: // S
-                Syllabus.alert( 'success', "Donec id elit non mi porta gravida at eget metus.", true );
+                SILTools.alert( 'success', "Donec id elit non mi porta gravida at eget metus.", true );
                 break;
             case 87: // W
-                Syllabus.alert( 'warning', "Aenean lacinia bibendum nulla sed consectetur.", true );
+                SILTools.alert( 'warning', "Aenean lacinia bibendum nulla sed consectetur.", true );
                 break;
             case 68: // D
-                Syllabus.alert( 'danger', "Etiam porta sem malesuada magna mollis euismod.", true );
+                SILTools.alert( 'danger', "Etiam porta sem malesuada magna mollis euismod.", true );
                 break;
             case 13:
-                Syllabus.alert( true );
+                SILTools.alert( true );
                 break;
             default:
                 console.log( event.keyCode );
